syntax = "proto3";
package raidbot.errcode;

option go_package = "raidbot.app/go/pkg/errcode";

enum ERR {
  UNSPECIFIED = 0;

  TODO = 666;
  NOT_IMPLEMENTED = 777;
  DEPRECATED = 888;
  INTERNAL = 999;

  // Generic helpers
  INVALID_INPUT = 101;
  MISSING_INPUT = 102;
  RESTRICTED_AREA = 105;
  MARSHAL = 106;
  UNMARSHAL = 107;

  // Database errors (starting at 1001)
  DB_NOT_FOUND = 1001;
  DB_INTERNAL = 1002;
  DB_INIT = 1003;
  DB_CONNECT = 1004;
  DB_AUTO_MIGRATE = 1005;
  DB_ADD_CALLBACK = 1006;
  CONFIGURE_DB = 1007;
  USER_PROTOBUF_CONVERSION = 1008;
  LICENSE_PROTOBUF_CONVERSION = 1009;
  USER_NOT_FOUND = 1010;
  USER_ID_FROM_STRING_CONVERSION = 1011;
  LICENSE_KEY_ID_FROM_STRING_CONVERSION = 1012;
  DISCOURSE_ID_FROM_STRING_CONVERSION = 1013;
  LOAD_OR_CREATE_USER = 1014;
  PAYMENT_PROTOBUF_CONVERSION = 1015;
  SUBSCRIPTION_PROTOBUF_CONVERSION = 1016;

  // Authentication errors (starting at 2001)
  AUTH_MISSING_METADATA = 2001;
  AUTH_MISSING_TOKEN = 2002;
  AUTH_MISSING_CONTEXT = 2003;
  AUTH_NO_PERMISSION = 2004;
  AUTH_INVALID_TOKEN = 2005;
  AUTH_INVALID_CLAIMS = 2006;
  AUTH_INVALID_CREDENTIALS = 2007;
  AUTH_INVALID_SSO_SIGNATURE = 2008;
  AUTH_INVALID_SSO_PAYLOAD = 2009;
  AUTH_INVALID_SSO_FORMAT = 2010;
  AUTH_MISSING_SSO_USER_INFO = 2011;
  AUTH_DISCOURSE_API_ERROR = 2012;
  AUTH_DISCOURSE_LOGOUT_ERROR = 2013;
  AUTH_DISCOURSE_REQUEST_ERROR = 2014;
  AUTH_DISCOURSE_RESPONSE_ERROR = 2015;

  // License errors (starting at 3001)
  LICENSE_REVOKED = 3001;
  LICENSE_EXPIRED = 3002;
  LICENSE_RANDOM_GENERATION = 3003;
  LICENSE_COLLISION = 3004;
  LICENSE_NOT_FOUND = 3005;
  LICENSE_INVALID_USAGE_ID = 3006;
  LICENSE_NOT_YET_EXPIRED = 3007;
  LICENSE_INVALID_OPERATION = 3008;
  LICENSE_NOT_YET_ACTIVATED = 3009;
  LICENSE_REQUIRED = 3010;

  // Redis errors (starting at 4001)
  REDIS_CONNECTION_ERROR = 4001;
  REDIS_SCAN_ERROR = 4002;
  REDIS_CONFIG_ERROR = 4003;
  REDIS_QUERY_ERROR = 4004;

  // Api errors (starting at 5001)
  GET_USER_FROM_CTX = 5001;
  API_LOGOUT = 5002;
  GENERATE_LICENSE = 5003;
  LICENSE_ALREADY_REVOKED = 5004;

  // Payment errors (starting at 6001)
  PAYMENT_WEBHOOK_INVALID = 6001;
  PAYMENT_CREATE_STRIPE_CHECKOUT_SESSION = 6002;
  PAYMENT_CREATE_PAYPAL_CHECKOUT_SESSION = 6003;
  PAYMENT_CREATE_PAYPAL_OAUTH_TOKEN = 6004;
  PAYMENT_RETRIEVE_PAYPAL_ORDER = 6005;
  PAYMENT_PAYPAL_WEBHOOK_SIGNATURE_INVALID = 6006;
  PAYMENT_PAYPAL_ORDER_LINKS_MISSING = 6007;
  PAYMENT_PAYPAL_APPROVAL_URL_MISSING = 6008;
  PAYMENT_PAYPAL_METADATA_ERROR = 6009;
  PAYMENT_PAYPAL_EVENT_PARSING_ERROR = 6010;
  PAYMENT_PAYPAL_ORDER_CAPTURE_FAILED = 6011;
  PAYMENT_PAYPAL_ORDER_ID_MISSING = 6012;
  PAYMENT_INVALID_DURATION_PRICING = 6013;

  // Subscription errors (starting at 7001)
  SUBSCRIPTION_ALREADY_ACTIVE = 7001;
  SUBSCRIPTION_ALREADY_CANCELED = 7002;
  SUBSCRIPTION_CANCEL = 7003;

  // Rate limit errors (starting at 8001)
  RATE_LIMIT_EXCEEDED = 8001;

  // Discord errors (starting at 9001)
  DISCORD_CONFIG_MISSING = 9001;
  DISCORD_REQUEST_CREATE = 9002;
  DISCORD_API_REQUEST = 9003;
  DISCORD_API_ERROR = 9004;
  DISCORD_USER_NOT_IN_GUILD = 9005;
  DISCORD_BOT_NO_PERMISSION = 9006;
  DISCOURSE_REQUEST_CREATE = 9007;
  DISCOURSE_API_REQUEST = 9008;
  DISCOURSE_API_RESPONSE = 9009;
  DISCOURSE_RESPONSE_PARSE = 9010;
}
